# CC2018-lab2

./: CMakeLists.txt  README.md
src/: Color.cpp  Color.h  Framebuffer.cpp  Framebuffer.h  Vertex2.cpp  Vertex2.h  main.cpp
